@startuml

!pragma layout smetana
left to right direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 220
skinparam ranksep 30

together {
class Users <<Entity>> {
        user_id : int
        full_name : String
        email : String
        password_hash : String
        role : String
        created_at : Date
        account_status : String

        insert()
        select()
        update()
        delete()
}

class Invoices <<Entity>> {
        invoice_id : int
        user_id : int
        file_path : String
        supplier : String
        invoice_no : String
        invoice_date : Date
        amount_excl_tax : float
        currency : String
        status : String
        uploaded_at : Date
        address : String
        consumption_jour : int
        consumption_pointe : int
        consumption_soiree : int
        consumption_nuit : int
        pu_jour : float
        pu_pointe : float
        pu_soiree : float
        pu_nuit : float
        montant_jour : float
        montant_pointe : float
        montant_soiree : float
        montant_nuit : float
        sous_total : float
        total_1 : float
        total_2 : float
        total_3 : float
        kwh_consumed : int
        net_a_payer : float

        insert()
        select()
        update()
        delete()
}

class Demands <<Entity>> {
        demand_id : int
        invoice_id : int
        user_id : int
        status : String
        submitted_at : Date
        reviewed_by_admin_id : int
        reviewed_at : Date

        insert()
        select()
        update()
        delete()
}

class AuditLogs <<Entity>> {
        audit_id : int
        demand_id : int
        action : String
        actor_id : int
        field_changed : String
        old_value : String
        new_value : String
        timestamp : Date

        insert()
        select()
}
}

Users -[hidden]right-> Invoices
Invoices -[hidden]right-> AuditLogs
AuditLogs -[hidden]right-> Demands

Users "1" -- "0..*" Invoices : upload
Users "1" -- "0..*" Demands : submits / reviews
Invoices "1" -- "0..*" Demands : generates
Demands "1" -- "0..*" AuditLogs : has
Users "1" -- "0..*" AuditLogs : generates

@enduml
